apps/hass/hass.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: hass
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: hass.ugard.mywire.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                number: 8123
  tls:
  - hosts:
    - hass.ugard.mywire.org
    secretName: tls-hass-ingress-http
