apps/hass/otgw-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otgw
  namespace: hass
spec:
  selector:
    matchLabels:
      app: otgw
      namespace: hass
  template:
    metadata:
      labels:
        app: otgw
        namespace: hass
    spec:
      containers:
      - image: docker.io/hvxl/otmonitor:stable
        imagePullPolicy: IfNotPresent
        name: otgw
        ports:
        - name: proxy
          containerPort: 7686
          protocol: TCP
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /data/otmonitor.conf
          subPath: otmonitor.conf
          name: config
        resources:
          limits:
            devic.es/serial: "1"
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   capabilities:
        #     drop:
        #       - ALL
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: otmonitor-config  
---
apiVersion: v1
kind: Service
metadata:
  name: otgw
  namespace: hass
spec:
  ports:
  - name: proxy
    port: 7686
  - name: web
    port: 8080
  selector:
    app: otgw
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otgw
  namespace: hass
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  rules:
  - host: otgw.ugard.win
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: otgw
              port:
                number: 8080
  tls:
  - hosts:
    - otgw.ugard.win
    secretName: tls-otgw-ingress-http
